# shooter

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  setup.sh
docs/: ability.md  animation.md  collision.md  ecs.md  network.md  random.md  tilemaps.md
scripts/: client-server.sh
src/: animation.rs  args.rs  collide.rs  debug.rs  input.rs  layer.rs  macros.rs  main.rs  metric.rs  movement.rs  net.rs  player.rs  tick_schedule.rs  tick_stage.rs  time.rs
src/input/: interpret.rs  mod.rs  tick_input_plugin.rs
src/net/: client.rs  config.rs  mod.rs  net.md  peer.rs  protocol.rs  server.rs
src/net/msg/: assign.rs  auth.rs  input.rs  mod.rs
