[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bevy = { version = "0.9.x" }
bevy-inspector-egui = { version = "0.14.x" }
bevy_prototype_lyon = { version = "0.7.x" }
parry2d = { version = "0.13.x", features = [ "enhanced-determinism" ] }
pico-args = { version = "0.5.x", features = [ "eq-separator", "combined-flags", "short-space-opt" ] }
