[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bevy = { version = "0.12.x" }
bevy-inspector-egui = { version = "0.22.x" }
bevy_prototype_lyon = { version = "0.10.x" }
naia-bevy-client = { version = "0.22.x", features = [ "transport_udp" ] }
naia-bevy-server = { version = "0.22.x", features = [ "transport_udp" ] }
naia-bevy-shared = { version = "0.22.x" }
parry2d = { version = "0.13.x", features = [ "enhanced-determinism" ] }
pico-args = { version = "0.5.x", features = [ "eq-separator", "combined-flags", "short-space-opt" ] }
